try gfortran-8 with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,17 @@ git:
   depth: false
 
 env:
-  - FC=gfortran CPPFLAGS="" NETCDFINC=-I/usr/lib64/gfortran/module NETCDFLIB="-L/usr/lib64 -lnetcdf -lnetcdff"
+  - FC=gfortran-8 CPPFLAGS="" NETCDFINC=-I/usr/lib64/gfortran/module NETCDFLIB="-L/usr/lib64 -lnetcdf -lnetcdff"
 
 addons:
   apt:
-    packages: ['gfortran', 'libnetcdff']
+    packages: ['gfortran-8', 'libnetcdff-dev']
 
 before_install:
   - git submodule update --init --recursive
 
 install: 
+  - gfortran-8 -v
   - make umwm 
     
 script:
