--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,12 @@ git:
 env:
   - FC=gfortran-8 CPPFLAGS="" NETCDFINC=-I/usr/lib64/gfortran/module NETCDFLIB="-L/usr/lib64 -lnetcdf -lnetcdff"
 
-addons:
-  apt:
-    packages: ['gfortran-8', 'libnetcdff-dev']
+#addons:
+# apt:
+#    packages: ['gfortran-8', 'libnetcdff-dev']
 
 before_install:
+  - sudo apt-get install -y gfortran-8 libnetcdff-dev
   - git submodule update --init --recursive
 
 install: 
