--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ env:
 #    packages: ['gfortran-8', 'libnetcdff-dev']
 
 before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
   - sudo apt-get install -y gfortran-8 libnetcdff-dev
   - git submodule update --init --recursive
 
