--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
 #    packages: ['gfortran-8', 'libnetcdff-dev']
 
 before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update
   - sudo apt-get install -y gfortran-8 libnetcdff-dev
   - git submodule update --init --recursive
