--- a/src/Makefile
+++ b/src/Makefile
@@ -28,6 +28,7 @@ OBJS = datetime_module.o \
        umwm_diagnostics.o \
        umwm_domain.o \
        umwm_forcing.o \
+       umwm_grid.o \
        umwm_init.o \
        umwm_io.o \
        umwm_module.o \
@@ -55,11 +56,12 @@ umwm: umwm.F90 $(OBJS)
 
 # Object           Source              Dependencies
 datetime_module.o: datetime_module.f90
-umwm_domain.o: umwm_domain.F90 datetime_module.o umwm_constants.o umwm_spectrum.o
+umwm_domain.o: umwm_domain.F90 datetime_module.o umwm_constants.o umwm_grid.o umwm_spectrum.o
 umwm_top.o:        umwm_top.F90 datetime_module.o umwm_constants.o umwm_module.o umwm_mpi.o umwm_forcing.o umwm_physics.o umwm_advection.o umwm_io.o umwm_init.o umwm_restart.o umwm_source_functions.o umwm_stress.o
 umwm_module.o: umwm_module.F90    
 umwm_constants.o: umwm_constants.F90
 umwm_diagnostics.o: umwm_diagnostics.F90 umwm_constants.o
+umwm_grid.o: umwm_grid.F90 umwm_constants.o
 umwm_mpi.o:        umwm_mpi.F90
 umwm_init.o:       umwm_init.F90       umwm_module.o umwm_mpi.o umwm_util.o umwm_io.o umwm_constants.o
 umwm_physics.o:    umwm_physics.F90    umwm_module.o umwm_io.o  umwm_advection.o
