--- a/umwm.toml
+++ b/umwm.toml
@@ -1,3 +1,11 @@
+name = "Blackwater Bay"
+
 [domain]
 grid_size_x = 120
 grid_size_y = 80
+
+[spectrum]
+num_frequencies = 37
+num_directions = 36
+frequency_min = 0.0313
+frequency_max = 2.0
